# wi

./: .gitignore  Cargo.toml  LICENSE  pyproject.toml
.github/workflows/: release.yml
wi/: __main__.py
